--- a/public/thank-you.html
+++ b/public/thank-you.html
@@ -25,11 +25,12 @@
       margin: 0;
       padding: 0;
       min-height: 100vh;
-      background-image: url('/images/pricing-banner.jpg'), 
+      background-image: url('/images/cool-background.png'), 
         linear-gradient(135deg, #519399 0%, #67bcc4 50%, #ffffff 100%);
       background-blend-mode: overlay;
-      background-size: cover;
+      background-size: cover, 100% 100%;
       background-position: center;
+      background-attachment: fixed;
       display: flex;
       justify-content: center;
       align-items: center;
